# util_source2

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
include/: util_source2.hpp  util_source2_definitions.hpp
include/source2/: block.hpp  impl.hpp  mesh_optimizer.hpp  resource.hpp  resource_data.hpp  resource_edit_info.hpp  span.hpp
include/source2/redi/: redi.hpp
src/: animation.cpp  animation_group.cpp  block.cpp  bone.cpp  c_wrapper.cpp  entity_lump.cpp  frame.cpp  impl.cpp  known_keyvalues.cpp  mesh.cpp  mesh_optimizer.cpp  mesh_scene_node.cpp  model.cpp  model_scene_node.cpp  murmur_hash2.cpp  murmur_hash2.hpp  redi.cpp  resource.cpp  resource_data.cpp  resource_edit_info.cpp  scene.cpp  scene_node.cpp  skeleton.cpp  util_source2.cpp  util_source2.cppm  world.cpp  world_loader.cpp
src/implementation/: animation.cpp  animation_group.cpp  block.cpp  bone.cpp  c_wrapper.cpp  definitions.hpp  entity_lump.cpp  frame.cpp  impl.cpp  keyvalue_list.txt  known_keyvalues.cpp  mesh.cpp  mesh_optimizer.cpp  mesh_scene_node.cpp  model.cpp  model_scene_node.cpp  murmur_hash2.cpp  murmur_hash2.cppm  redi.cpp  resource.cpp  resource_data.cpp  resource_edit_info.cpp  scene.cpp  scene_node.cpp  skeleton.cpp  util_source2.cpp  world.cpp  world_loader.cpp
src/interface/: block.cppm  core.cppm  impl.cppm  mesh_optimizer.cppm  redi.cppm  resource.cppm  resource_data.cppm  resource_edit_info.cppm
third_party_libs/: CMakeLists.txt
third_party_libs/lz4-cmake/: CMakeLists.txt
